# selfevals

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INTEGRATION_SEALS.md  LICENSE  README.md  SECURITY.md  SELFEVALS_SCALE_ARCHITECTURE_ANALYSIS.html  docker-compose.yml  escalar.md  features.md  fly.toml  pyproject.toml
.claude/hooks/: session-start.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: FE_FASE_A_PENDIENTES.md  FRONTEND.md  FRONTEND_PRODUCT_PLAN.md  PAIRWISE_PORT_HANDOFF.md  ROADMAP.md  SCALE_ARCHITECTURE.md  SCALING_ROADMAP.md  STATUS.md  TECHNICAL_DEBT.md  adapters.md  api_reference.md  deploy.md  eval_config.md  json_report_schema.md  troubleshooting.md
docs/archive/: SEALS_100X_GAP_PLAN.md
docs/prompts/: sdk_otlp_session_prompt.md  web_session_prompt.md
docs/quality/: README.md  technical_debt_baseline.json
docs/spec/: anchor_set_global.md  error_analysis_design.md  evals_framework.md  operational_spec_v0.1.md  raw.md  sdk_otlp_design.md  taxonomy.md
docs/web/: decisions.md
evals/datasets/: showcase.jsonl
evals/experiments/: example_pingpong.yaml  example_showcase.yaml
examples/: README.md
examples/hello_chat/: cases.jsonl  experiment.yaml
examples/hello_llm/: __init__.py  agent.py  cases.jsonl  experiment.yaml
examples/hello_openai/: __init__.py  agent.py  experiment.yaml
landing/: package-lock.json  package.json
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/components/: CaseStudy.tsx  Compare.tsx  Features.tsx  FinalCTA.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  InstallPill.tsx  Nav.tsx  Proof.tsx  Terminal.tsx  TrustStrip.tsx  primitives.tsx
landing/src/lib/: LangContext.tsx  browserStorage.ts  i18n.ts
scripts/: audit_technical_debt.py
src/bootstrap/: __init__.py  _errors.py
src/bootstrap/_internal/: hashing.py  ids.py  time.py
src/bootstrap/analysis/: __init__.py  bundle.py  hypothesis.py  ingest.py  schemas.py  staging.py
src/bootstrap/api/: __init__.py  __main__.py  app.py  broker.py  broker_bridge.py  queries.py  schemas.py  sse.py
src/bootstrap/cli/: __init__.py  _friendly.py  _help.py  analyze_commands.py  commands.py  main.py
src/bootstrap/decision/: __init__.py  matrix.py
src/bootstrap/examples/: __init__.py  pingpong.py
src/bootstrap/graders/: __init__.py  base.py  calibration.py  deterministic.py  llm_judge.py  registry.py
src/bootstrap/optimization/: __init__.py  aggregator.py  loop.py  proposers.py
src/bootstrap/repo/: __init__.py  loader.py
src/bootstrap/reporter/: __init__.py  _metrics.py  compare.py  json_report.py  markdown.py
src/bootstrap/runner/: __init__.py  adapters.py  executor.py  otlp_receiver.py  otlp_to_recorder.py  sandbox.py
src/bootstrap/schemas/: __init__.py  _base.py  annotation.py  dataset.py  enums.py  eval_case.py  fleet.py  (+8 more)
src/selfeval/: __init__.py  _errors.py
src/selfevals/: __init__.py  _errors.py
tests/: _sharded.py  conftest.py  test_internal_hashing.py  test_internal_ids.py  test_internal_time.py  test_smoke.py
tests/analysis/: test_handshake.py
tests/api/: _experiment_factory.py  _tournament_judge.py  test_analysis.py  test_api.py  test_baseline.py  test_broker.py  test_clusters_endpoint.py  test_compare_endpoint.py  test_datasets.py  test_experiments_filters.py  test_failure_modes.py  test_funnel_endpoint.py  test_live_stream_e2e.py  test_metrics_endpoint.py  test_pairwise.py  test_results_endpoint.py  test_run_endpoint.py  test_run_jobs.py  test_run_queue.py  test_sse.py  test_threads.py
tests/ci/: test_regression.py
tests/cli/: helpers_str_agent.py  test_adapter_wiring.py  test_analyze_cli.py  test_baseline_commands.py  test_ci_commands.py  test_cli.py  test_cli_run.py  test_compare.py  test_dataset_commands.py  test_examples_cli.py  test_help_texts.py  test_migrate_sqlite.py  test_serve.py  test_skills_cli.py
tests/decision/: test_loop_integration.py  test_matrix.py
tests/examples/: test_hello_llm.py  test_showcase_offline.py
tests/graders/: test_artifact.py  test_breakdown.py  test_calibration.py  test_classification.py  test_confusion.py  test_deterministic.py  test_funnel.py  test_guardrail.py  test_judge_panel.py  test_llm_judge.py  test_pairwise.py  test_registry_dotted_path.py  test_select.py  test_set_match.py  test_trajectory.py
tests/integration/: test_full_loop_with_mocked_judge.py  test_sharded_coordinator.py
tests/optimization/: test_aggregator.py  test_loop.py  test_loop_error_analysis.py  test_pairing.py  test_proposers.py  test_ranking.py  test_sampling.py  test_scenario_outcomes.py
tests/repo/: test_datasets.py  test_loader.py
tests/reporter/: test_compare_structured.py  test_funnel.py  test_json_report.py  test_markdown.py  test_metrics.py
tests/runner/: test_adapters.py  test_baseline.py  test_executor.py  test_launch_wiring.py  test_multiturn.py  test_otlp_receiver.py  test_otlp_to_recorder.py  test_pairwise_ops.py  test_pairwise_tournament.py  test_pricing.py  test_retry.py  test_sandbox.py  test_simulator.py  test_throttle.py
tests/schemas/: test_annotation.py  test_base.py  test_baseline.py  test_cross_entity.py  test_dataset.py  test_enums.py  test_error_analysis_spec.py  test_eval_case.py  test_experiment.py  test_failure_mode.py  test_fleet.py  test_grader_card.py  test_iteration.py  test_job.py  test_pairwise_verdict.py  test_registry.py  test_tool.py  test_trace.py  test_workspace.py
tests/sdk/: test_auto_instrument.py  test_facade.py
tests/skills/: test_skills_locator.py
tests/storage/: test_factory.py  test_filesystem_object_store.py  test_migrations.py  test_postgres_storage.py  test_seed.py  test_sqlite_storage.py
tests/trace/: test_otel_importer.py  test_payload_router.py  test_recorder.py  test_recorder_sink.py
tests/worker/: test_lease_sweeper.py  test_runs.py
web/: .gitignore  .prettierignore  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: README.md  global-setup.ts  helpers.ts
web/src/: app.css  app.html  hooks.server.ts
(+385 files in other folders)
