[project]
name = "bootstrap"
version = "0.0.4"
description = "Self-improving evals framework for AI agents."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Patricio Valdez", email = "patovaldezflores@gmail.com" },
]
keywords = ["evals", "agents", "llm", "optimization"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.7,<3",
]

[project.scripts]
bootstrap = "bootstrap.cli.main:app"

[project.urls]
Homepage = "https://github.com/patovaldezf-berkeley/boostrap"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]  # test fn names can be permissive

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_unimported = true
no_implicit_reexport = true
files = ["src/bootstrap"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = ["error"]
