[project]
name = "selfevals"
version = "0.6.0"
description = "Self-improving evals framework for AI agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Patricio Valdez", email = "patovaldezflores@gmail.com" },
]
keywords = ["evals", "agents", "llm", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6,<7",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
# Web API surface (`python -m selfevals.api`). Optional — the core loop
# never imports these; api/* defers the FastAPI import to call time.
web = [
    "fastapi>=0.110,<1",
    "uvicorn>=0.29,<1",
]
# OTel capture pipe + OTLP bridge. Imported lazily in sdk/* and runner/*
# under try/except ImportError, so the base install stays ~2MB.
telemetry = [
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
    "opentelemetry-proto>=1.25,<2",
]
# Each provider extra bundles two things: the provider's own SDK (so the
# agent the user wires up can call the API) and the matching OpenInference
# instrumentor (so selfevals captures traces from that SDK). This mirrors
# Pydantic AI's per-provider extras — `pip install selfevals[openai]` is
# enough to run and trace an OpenAI-backed agent, no separate SDK install.
# The codepaths still lazy-import under try/except and raise a friendly
# "pip install selfevals[<provider>]" error if the SDK is somehow absent,
# so a partial environment degrades cleanly instead of crashing opaquely.
anthropic = [
    "selfevals[telemetry]",
    "anthropic>=0.40",
    "openinference-instrumentation-anthropic>=0.1",
]
openai = [
    "selfevals[telemetry]",
    "openai>=1.40",
    "openinference-instrumentation-openai>=0.1",
]
bedrock = [
    "selfevals[telemetry]",
    "boto3>=1.34",
    "openinference-instrumentation-bedrock>=0.1",
]
vertex = [
    "selfevals[telemetry]",
    "google-cloud-aiplatform>=1.60",
    "openinference-instrumentation-vertexai>=0.1",
]
# LangGraph traces flow through the LangChain instrumentor (it builds on
# LangChain); there is no standalone openinference-instrumentation-langgraph.
langchain = [
    "selfevals[telemetry]",
    "langchain>=0.2",
    "openinference-instrumentation-langchain>=0.1",
]
crewai = [
    "selfevals[telemetry]",
    "crewai>=0.40",
    "openinference-instrumentation-crewai>=0.1",
]
all = [
    "selfevals[web,anthropic,openai,bedrock,vertex,langchain,crewai]",
]

[project.scripts]
selfevals = "selfevals.cli.main:main"

[project.urls]
Homepage = "https://github.com/patovaldezf/selfevals"
Repository = "https://github.com/patovaldezf/selfevals"
Changelog = "https://github.com/patovaldezf/selfevals/blob/main/CHANGELOG.md"
Issues = "https://github.com/patovaldezf/selfevals/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Explicit allow-list. Without it, hatchling sweeps the whole repo into the
# sdist — including `web/node_modules/` (3k+ files, 24MB). The sdist only
# needs the package source plus the material that lets a consumer build,
# test, and understand it.
include = [
    "src/selfevals",
    "tests",
    "docs",
    "evals",
    "examples",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]
# Belt-and-suspenders: the SvelteKit app under web/ (node_modules + build
# output) must never reach the sdist. exclude wins over include in hatchling.
exclude = [
    "web",
    "**/node_modules",
    "**/*.sqlite*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/selfevals"]
# Ship the bundled agent skills (mirrors FastAPI's `.agents/skills/`
# convention) so `pip install selfevals` makes them discoverable. They live
# under a dot-directory inside the package; `artifacts` overrides hatchling's
# default exclusion of dotfiles without double-including (a `force-include`
# here duplicates the entry, since `packages` already globs the tree).
artifacts = [
    "src/selfevals/.agents/**",
    "src/selfevals/examples/evals/**",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-pyyaml>=6,<7",
    "fastapi>=0.110,<1",
    "uvicorn>=0.29,<1",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
    "opentelemetry-proto>=1.25,<2",
    "httpx>=0.27,<1",  # fastapi.testclient.TestClient backend, used by tests/api
    "pytest-asyncio>=0.23,<1",  # runs @pytest.mark.asyncio tests (tests/api/test_broker)
    "build>=1.2,<2",  # PEP 517 frontend for `python -m build` (sdist + wheel)
    "twine>=5,<7",  # validate + upload distributions to (Test)PyPI
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]  # test fn names can be permissive
"src/selfevals/api/**" = ["B008"]  # FastAPI Depends(...) in defaults is idiomatic

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_unimported = true
no_implicit_reexport = true
files = ["src/selfevals"]

[[tool.mypy.overrides]]
# uvicorn is only present with the [web] extra; api/__main__ imports it under
# try/except. Ignore the missing stub so the type check is deterministic
# whether or not the extra is installed.
module = ["uvicorn"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
# strict: only tests explicitly marked @pytest.mark.asyncio run on the loop
# (matches how tests/api/test_broker is written). The marker itself is
# registered by the pytest-asyncio plugin, so it isn't declared here.
asyncio_mode = "strict"
filterwarnings = ["error"]
